Feat: mark an order as delivered
